--- a/VRChat/24/1023624.html
+++ b/VRChat/24/1023624.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "mXjvszD+zr5LsRLNt429U9kFZ/jZMFZzrfnsAlWx0d8="></script>
+    "CGgvc3ino5tIB/CAlyygdfIIpe41BBg1Tn56BVZ16fY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】 ポーション瓶","description":"某ゲーム風のポーション入り瓶です。△2568ポリゴン\n瓶と蓋、中身は別パーツです(中身は揺れません)。\nマテリアルの色を変更する事により2枚目の様に内容物を変えられます。\n\nStandardShaderを使用しておりますがFreeMatcapShader等をお使い頂くと\nより一層質感が増すかと思われます。（当品には同梱していません）\n\n【内容物】\n・Unitypackage　・FBXファイル　・Readme\n\n【利用規約】\n　【許可事項】\n　　・改変\n　　・R-18、R-18G表現\n　　・VRChat以外の媒体への使用\n　　　（VirtualCast配信、動画・配信による撮影、ゲーム内組み込み等）\n　　・VRChat内アバターペデスタルへの配置\n　\n　【禁止事項】\n　　・全年齢、R18問わず商用利用\n　　・データを取り出せる状態での二次配布（無改変・改変済問わず）\n　　・自作発言\n　　・誹謗中傷、政治的、宗教的、その他公序良俗に反する目的での使用\n\n本データを使用した事により発生した問題、損失について配布元は一切の責任を負いません。\nまた本データをご利用頂いた時点で利用規約に同意したものとみなします。","url":"https://booth.pm/ja/items/1023624","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5f6402dd-f6b1-4103-93e7-d6b0c9bb807c/i/1023624/7a219754-b41a-4c37-bc52-fd8729f07b96_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mXjvszD+zr5LsRLNt429U9kFZ/jZMFZzrfnsAlWx0d8="></script>
+    nonce="CGgvc3ino5tIB/CAlyygdfIIpe41BBg1Tn56BVZ16fY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -366,9 +366,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
