--- a/VRChat/66/1022766.html
+++ b/VRChat/66/1022766.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "dCSETISaQwl18Anvf03SaNCbTrEE71Qob8vbluxiFnA="></script>
+    "gLuqZV88WdsCpg5G4XmoomYRr3lrjXvg6FFw7NVGx6o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRchat向け]三色串団子　～unity教室教材～","description":"VRChat向け　三色串団子 紹介文\nVRChat向けに作成された三色串団子です。\nVRChat外での利用も可能です。\n全ての団子に別のマテリアルが割り当てられているので、unity上で簡単にそれぞれの色を変更できます。\n\n[ユニティちゃんでわかるVRchatのためのunity教室]で導入を詳細に説明しています。\n\n内容物\n３Dモデル（FBX）\nテクスチャ\nreadme\n\nポリゴン数\n3066\n\n導入方法\nアバターをすでに読み込んだunityのプロジェクトにunitypackageを読み込んだあと、本モデルをシーンに追加し、手のボーンに直接組み込んでください。\n串の先と一つ目の団子にシェイプキーが仕込んであるのでご自由にお使いください。\n利用規約\n・本データ、改変されたデータの著作権は制作者が所有します。\n・本データ、またはその一部を再配布することを禁止します。商用利用、改変は可能です。\n・本データまたはその一部が、購入者以外の手に渡る使用方法を禁止します。\n・利用規約は変更される可能性があります。\n・政治、宗教活動、他者に対する誹謗中傷目的での使用を禁止します。\n\n免責事項\n・いかなる場合においても、このモデルによって生じた責任を負いかねます。\n\nモデル制作者：Herokichi","url":"https://booth.pm/ja/items/1022766","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/31016ebe-ac0b-47f3-82d0-a79c7d105baa/i/1022766/7a7029a3-2bd7-4b7c-bc86-8b66a2e8c020_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dCSETISaQwl18Anvf03SaNCbTrEE71Qob8vbluxiFnA="></script>
+    nonce="gLuqZV88WdsCpg5G4XmoomYRr3lrjXvg6FFw7NVGx6o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -468,9 +468,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
