--- a/VRChat/29/1022529.html
+++ b/VRChat/29/1022529.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "8AgziH6qEAQqdy6TSek2nwLsBmmpWuX7Xd/kpUgonik="></script>
+    "dXal1IbnG3tNs1Ew9jXQPmmij3w8bv3zDMEdKTrxwYY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ガンダムダンボール","description":"俺がガンダムだ！\n\n改変OK何してもOKです。\nテクスチャが変かもしれません。申し訳ないです。\n\n追記:Unity上で開くとめっっっちっちゃくなってしまうので\nスケールを100倍にして使用することをお勧めします。","url":"https://booth.pm/ja/items/1022529","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/81aca01d-8cc1-4f1d-9ff6-1e283ef2864f/i/1022529/9fbba24a-b4b1-4b41-b2d6-c4492e2df8da_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8AgziH6qEAQqdy6TSek2nwLsBmmpWuX7Xd/kpUgonik="></script>
+    nonce="dXal1IbnG3tNs1Ew9jXQPmmij3w8bv3zDMEdKTrxwYY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -336,9 +336,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
