--- a/VRChat/26/1022026.html
+++ b/VRChat/26/1022026.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "r0IVBXfWL51m3ABAfR1BDXCghNKoj09k2d8RQSnKy3M="></script>
+    "IoXABXCCrF1zU9u7P+6vITZoYMmrQYeF6oMNt26KHuQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ペンギン「ぺんぐぃんさん」　VRC向け　Fbxモデル","description":"本製品は、VRChat向け、fbx形式の3Dペンギンモデルです。\nヒューマノイド対応\n\n▼製品内容\nreadme\nFBXファイル\nテクスチャファイル\n\n▼本体説明\n「Ykr-Armament.co」が製作する武器、装備品、イメージ品のモデルとなっております。\nペンギン研究のために群れに入るために開発された\nペンギンになります。コウテイペンギンです\n\nポリゴン数：6626\n\n▼トラッキングに関して\nVRのみであれば基本的に問題はございませんが\nフルトラッキングになると、尻尾が前にでるという状態が発生しております。\nデスクトップか、通常のVRのみでの使用をお願いいたします\n\n\n\n\n\n▼使用に関して\n１．著作権は製作者「Yuuki-rin」に帰属、改変後もYuuki-rinに帰属\n２．使用禁止事項\n→再配布、改変後の再配布は禁止とします\n→改変後であっても、元のモデルの自作発言は禁止とします。\n　※改変後の部分等は自慢してもらっても大丈夫です。元々ある部分のみが対象です。\n\n３．使用可能事項\n→「テクスチャ改変」「モデル改変」「UVの改変」「動画」「営業利用」等、基本的にはなんでもOKです\n※可能かどうか、ご不明点ございましたら、ご連絡お願いいたします。\n\n４．免責事項\n→本データを利用による損害に対する責任は追わないものとさせていただきます。\n→特定個人や団体への中傷を目的とした利用を禁止します。\n\n５．連絡\nその他不明点等ございましたら、Twitterへご連絡お願いいたします。\n＠Yukki_WarVtuber\n","url":"https://booth.pm/ja/items/1022026","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/8488e81a-360b-4cf8-a9ff-572ec8fd6b04/i/1022026/f89a0306-08b2-4c64-9704-7887f71622a0_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="r0IVBXfWL51m3ABAfR1BDXCghNKoj09k2d8RQSnKy3M="></script>
+    nonce="IoXABXCCrF1zU9u7P+6vITZoYMmrQYeF6oMNt26KHuQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -436,9 +436,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
