--- a/VRChat/27/1021527.html
+++ b/VRChat/27/1021527.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "N04+1JEOMkewKM40F4LVT63IFjHZBnebxQ+4iJMeHKE="></script>
+    "rKkJQSgkvqwwmQFVCduLpB5S4nm0dyLY+aq7VCxvZA4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【アイテム】くらげさん","description":"VRChat用3Dモデル 「くらげさん」\n\nペットとして自分のアバターにくっつけたり、\nアバターとして使ったり、\nワールドアイテムとして使ったり、\n\nぷるんぷるんのくらげさんを自由に使って遊んでくださいね！\n\nシェイプキーは、リップシンク用5個と、目をつぶる　が入っています。\n\n\nポリゴン数：1220\n\nシェーダーはUnlitWFを設定しています。\nhttps://github.com/whiteflare/Unlit_WF_ShaderSuite/releases\n\n\n\n＜更新履歴＞\n2020.04.30 unity2018対応。シェーダーをUnlitWFに変更。\n2019.04.23\n・マテリアルを１つ減らし、FBX、テクスチャを更新しました。\n・VRChatワールドアイテム用設定済みのunitypackageを追加しました。\n","url":"https://booth.pm/ja/items/1021527","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/1021527/ffbe35a1-21ba-4c5d-94ef-606b28049103_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="N04+1JEOMkewKM40F4LVT63IFjHZBnebxQ+4iJMeHKE="></script>
+    nonce="rKkJQSgkvqwwmQFVCduLpB5S4nm0dyLY+aq7VCxvZA4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -170,7 +170,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      201
+                                      202
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -186,7 +186,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      201
+                                      202
                                     </div>
                                   </div></a>
                                 </div>
@@ -496,9 +496,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
