--- a/VRChat/25/1021025.html
+++ b/VRChat/25/1021025.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "uwxXGSCXAiJjwBVExwH8GZjmrXLuroHcq+GdaQ1hckg="></script>
+    "JXst5PfATWR5ZE8zV4f/1QUnb/eu9H0pjqFTLEa+Z8k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"PCデスク","description":"110×60×75くらいのPCデスクです。\n三角面396です。\nfbx objファイルと、テクスチャファイルが入っています。\n\nPCdesk\n\n■モデル製作：ハザマススム\n　□Twitter https://twitter.com/hazama_susumu\n\n■説明\n　□使っている110×60×75ぐらいのPCデスクの3Dモデルです\n\n■免責\n　□このモデルデータを使って起きた不利益は\n　　いかなる場合でも製作者は一切責任を負いません\n　□著作権はハザマススムにあります\n\n■許可\n　□非商用・商用利用\n　□非改変・改変利用\n\n■禁止事項\n　□再配布\n　□自作発言\n　□迷惑行為\n","url":"https://booth.pm/ja/items/1021025","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/353af48e-2d96-4325-9c66-ad3463af6bc1/i/1021025/6c15bfd6-775c-42fe-b2b5-df77d5dfb6d5_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uwxXGSCXAiJjwBVExwH8GZjmrXLuroHcq+GdaQ1hckg="></script>
+    nonce="JXst5PfATWR5ZE8zV4f/1QUnb/eu9H0pjqFTLEa+Z8k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -421,9 +421,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
